# point_clound_process

./: .gitignore  CMakeLists.txt  README.cn.md  README.md
cmake/: build_config.cmake  install_config.cmake
include/: main.h
include/algorithm/: cloud_converter.h
include/app/: log.h  translation.h
include/common/: DataType.h  global.h
include/gui/: cloud_convert_widget.h  main_window.h
src/: main.cpp
src/app/: log.cpp  translation.cpp
src/common/: global.cpp
src/gui/: cloud_convert_widget.cpp  main_window.cpp
translations/: point_clound_process_en_AS.ts  point_clound_process_zh_CN.ts
ui/: cloud_convert_widget.ui  main_window.ui
